--- a/css/pdf.css
+++ b/css/pdf.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px 0;
-  padding: 10px;
+  margin:  0 0 10px 0;
 }
 
 .PDF__container__load {
@@ -13,8 +12,7 @@
 
 .PDF__container__document {
   width: 100%;
-  max-width: calc(100% - 2em);
-  margin: 1em 0;
+  margin: 0;
 }
 
 .PDF__container__document .react-pdf__Document {
@@ -24,7 +22,7 @@
 }
 
 .PDF__container__document .react-pdf__Page {
-  margin: 1em 0;
+  margin: 0 0 1em 0;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 }
 
